# fireshark

./: .gitignore  AGENTS.md  CLAUDE.md  COPYRIGHT  Cargo.toml  Justfile  README.md  manifest
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.claude/: settings.json
.github/workflows/: release.yml
crates/: README.md
crates/fireshark-backend/: Cargo.toml  README.md
crates/fireshark-backend/src/: audit.rs  backend.rs  capture.rs  compare.rs  lib.rs  native.rs  reassembly.rs  tshark.rs
crates/fireshark-backend/tests/: backend_selection.rs  compare.rs  differential.rs  native_capture.rs
crates/fireshark-backend/tests/support/: mod.rs
crates/fireshark-cli/: Cargo.toml  README.md
crates/fireshark-cli/src/: audit.rs  certificates.rs  color.rs  detail.rs  diff.rs  follow.rs  hexdump.rs  issues.rs  json.rs  main.rs  render.rs  search.rs  stats.rs  summary.rs  timestamp.rs
crates/fireshark-cli/tests/: audit_command.rs  certificates_command.rs  detail_command.rs  diff_command.rs  filter_command.rs  follow_command.rs  fuzz_regression.rs  issues_command.rs  json_output.rs  justfile_docs.rs  runtime_paths.rs  search_command.rs  stats_command.rs  summary_command.rs
crates/fireshark-cli/tests/support/: mod.rs
crates/fireshark-core/: Cargo.toml  README.md
crates/fireshark-core/src/: frame.rs  issues.rs  layer.rs  lib.rs  names.rs  packet.rs  pipeline.rs  stream.rs  summary.rs  testing.rs
crates/fireshark-core/tests/: frame_summary.rs  packet_model.rs  pipeline.rs  stream.rs  summary_render.rs
crates/fireshark-dissectors/: Cargo.toml  README.md
crates/fireshark-dissectors/src/: arp.rs  dns.rs  error.rs  ethernet.rs  http.rs  icmp.rs  ipv4.rs  ipv6.rs  lib.rs  tcp.rs  tls.rs  udp.rs
crates/fireshark-dissectors/tests/: checksum.rs  dns.rs  edge_cases.rs  ethernet_arp.rs  ethernet_ipv4.rs  ethernet_ipv6.rs  http.rs  ipv6_extensions.rs  ppa_samples.rs  tls.rs  transport.rs  wireshark_samples.rs
crates/fireshark-dissectors/tests/support/: mod.rs
crates/fireshark-file/: Cargo.toml  README.md
crates/fireshark-file/src/: error.rs  lib.rs  reader.rs
crates/fireshark-file/tests/: read_pcap.rs  read_pcapng.rs  reject_short_capture.rs  reject_unsupported_linktypes.rs
crates/fireshark-filter/: Cargo.toml  README.md
crates/fireshark-filter/src/: ast.rs  error.rs  evaluate.rs  fields.rs  lexer.rs  lib.rs  parser.rs
crates/fireshark-filter/tests/: public_api.rs
crates/fireshark-mcp/: Cargo.toml  README.md
crates/fireshark-mcp/src/: analysis.rs  audit.rs  filter.rs  lib.rs  main.rs  model.rs  query.rs  server.rs  session.rs  tools.rs
crates/fireshark-mcp/tests/: audit.rs  open_capture.rs  public_api.rs  query.rs  server_help.rs  session_manager.rs  stdio_smoke.rs  tools.rs
crates/fireshark-mcp/tests/support/: mod.rs
crates/fireshark-tshark/: Cargo.toml  README.md
crates/fireshark-tshark/src/: certs.rs  command.rs  error.rs  follow.rs  lib.rs  normalize.rs  reassembly.rs  version.rs
docs/: README.md  ROADMAP.md
docs/plans/: 2026-03-15-fireshark-crawl-implementation-plan.md  2026-03-15-fireshark-design.md  2026-03-16-dns-dissector.md  2026-03-16-fireshark-mcp-design.md  2026-03-16-fireshark-mcp-implementation-plan.md  2026-03-16-pr7-review-fixes.md  2026-03-17-audit-heuristics-v2-design.md  2026-03-17-dns-response-parsing-design.md  2026-03-17-stream-tracker.md  2026-03-18-clone-hotpaths-design.md  2026-03-18-clone-hotpaths.md  2026-03-18-string-filters-design.md  2026-03-18-tshark-reassembly-design.md  2026-03-18-v06-features-design.md  2026-03-18-v09-features-design.md
docs/references/: feature-parity.md  mcp-server.md  rfc-compliance-audit.md
docs/reports/: 2026-03-15-pr-1-review-followup.md  2026-03-16-fireshark-mcp-smoke-test.md
docs/reviews/: 2026-03-19-rfc-compliance-audit.md
docs/stakeholders/: architect.md  developer.md  devops.md  ops.md  tester.md  user.md
docs/superpowers/plans/: 2026-03-16-cli-color-output.md  2026-03-16-cli-detail-command.md  2026-03-16-display-filter-language.md  2026-03-16-dissector-hardening.md  2026-03-16-timestamps-and-original-length.md
docs/superpowers/specs/: 2026-03-16-cli-color-output-design.md  2026-03-16-cli-detail-command-design.md  2026-03-16-display-filter-language-design.md  2026-03-16-dissector-hardening-design.md  2026-03-16-dns-dissector-design.md  2026-03-16-fireshark-pr-review-design.md  2026-03-16-timestamps-and-original-length-design.md  2026-03-17-stream-tracker-design.md  2026-03-17-tls-dissector-design.md
fixtures/: README.md
fixtures/smoke/: PROVENANCE.md  minimal.pcap  minimal.pcapng  ppa-synscan.pcapng  wireshark-dns.pcap
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_capture_reader.rs  fuzz_decode_packet.rs
ppa3ecaptures/: README.md
