[workspace.package]
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"

[workspace]
members = [
    "crates/fireshark-core",
    "crates/fireshark-dissectors",
    "crates/fireshark-file",
    "crates/fireshark-cli",
    "crates/fireshark-mcp",
    "crates/fireshark-filter",
    "crates/fireshark-backend",
    "crates/fireshark-tshark",
]
resolver = "2"
