[package]
name = "fireshark-backend"
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
fireshark-core = { path = "../fireshark-core" }
fireshark-dissectors = { path = "../fireshark-dissectors" }
fireshark-file = { path = "../fireshark-file" }
fireshark-tshark = { path = "../fireshark-tshark" }
thiserror = "2.0.17"

[dev-dependencies]
fireshark-tshark = { path = "../fireshark-tshark" }
