[package]
name = "fireshark-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fireshark"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3"
fireshark-core = { path = "../fireshark-core" }
fireshark-dissectors = { path = "../fireshark-dissectors" }
fireshark-file = { path = "../fireshark-file" }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
