[package]
name = "fireshark-cli"
version = "0.5.1"
edition = "2024"
license.workspace = true

[[bin]]
name = "fireshark"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3"
fireshark-core = { path = "../fireshark-core" }
fireshark-dissectors = { path = "../fireshark-dissectors" }
fireshark-file = { path = "../fireshark-file" }
fireshark-filter = { path = "../fireshark-filter" }
fireshark-mcp = { path = "../fireshark-mcp" }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3"
