[package]
name = "fireshark-file"
version = "0.9.0"
edition = "2024"
license.workspace = true

[dependencies]
fireshark-core = { path = "../fireshark-core" }
# RC pinned because pcap-file 3.0 stable has not been released yet (as of 2026-03).
# Update to stable when available.
pcap-file = "3.0.0-rc1"
thiserror = "2.0.17"
