[package]
name = "fireshark-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fireshark-mcp"
path = "src/main.rs"

[dependencies]
fireshark-core = { path = "../fireshark-core" }
fireshark-dissectors = { path = "../fireshark-dissectors" }
fireshark-file = { path = "../fireshark-file" }
rmcp = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
